add readme and Makefile.yida

--- a/src/readme
+++ b/src/readme
@@ -24,8 +24,13 @@ fixed some minor bugs
 allowed mask file data type to be float
 
 1.2.2
-allowed data file data type to be float
+allowed data type of data/mask file to be float
 add a new input argument -e to specify the block file directory
 
 1.2.3
-allows different files to have different TRs. Tested with Megan's simulation data.
+fix a bug in SVMPredictorWithMasks.cpp. When computing the correlation matrices in GetPartialInnerSimMatrixWithMasks(), we need to be aware that different subjects may have different TRs, so the col information should be specified in every loop.
+
+1.3
+separate the file related functions into a new file FileProcessing.cpp/h.
+write voxel selection results in nifti format, produce two files, one stores the voxel sequences, the other stores the voxel scores. a nifti file should be provided as the reference (will copy its nifti_image and only replace nbyter, datatype and data of the struct). the previous voxel list output in txt format is also kept for now. users provide a file prefix of output files, '_list.txt', '_seq.nii.gz', '_score.nii.gz' will be added for three output files.
+the previous change also applied to searchlight voxel selection. fixed a bug in searchlight, the voxel location array also needs to be masked when a mask file is applied.
