--- a/src/readme
+++ b/src/readme
@@ -38,3 +38,6 @@ the previous change also applied to searchlight voxel selection. fixed a bug in 
 1.3.1
 output real values for each test item in test tasks
 fix minor bugs in SVMPredictor.cpp
+
+1.3.2
+add correlation visualization task (type 8) to generate a 4D nifti file for visualizing the correlation between some voxels in a certain block.
