--- a/src/readme
+++ b/src/readme
@@ -44,3 +44,6 @@ add correlation visualization task (type 8) to generate a 4D nifti file for visu
 
 1.3.3
 use float instead of double to store the raw data to save memory
+
+1.3.4
+bug fixed, don't do zscore when there's one one value
