--- a/src/readme
+++ b/src/readme
@@ -46,4 +46,7 @@ add correlation visualization task (type 8) to generate a 4D nifti file for visu
 use float instead of double to store the raw data to save memory
 
 1.3.4
-bug fixed, don't do zscore when there's one one value
+bug fixed, don't do zscore when there's only one value
+
+1.3.5
+tune the z-score function, add quiet mode in predict
