--- a/src/readme
+++ b/src/readme
@@ -70,3 +70,7 @@ add ridge regularization and change the data normalization method in marginal sc
 1.4.3
 improve the performance of activity-based searchligt voxel selection (-k 2)
 add shuffling to activity-based voxel selection, works as for correlation-based voxel selection
+
+1.4.4
+add VoxelwiseAnalysis.cpp/h for better performance (3x faster) of correlation-based voxel selection (-k 0) running on Phi
+provide a flag option __MEASURE_TIME__ for printing the matrix multiply, normalization and SVM classification time info for correlation-based voxel selection
