--- a/src_beta/readme
+++ b/src_beta/readme
@@ -93,6 +93,7 @@ fix a bug in voxelwise voxel selection code
 1.5 in BETA version now
 focus on optimizing code of correlation-based voxel selection (-k 0) for xeon phi
 in this version, xeon and xeon phi mixed voxel selection task is NOT supported yet
+the default setting is for running on xeon phi, __USE_MIC__ needs to be commented out in Makefile for running on xeon
 do getBuf to normalize the activity matrices in master node to save bandwidth and computing time on xeon phi
 use predefined space instead of dynamically allocated space to store corelation values to help the compilor's optimization. by doing this, the data contention in 1.4.7 is fixed as well
 rewrite z-score function for better vectorization, also eliminate double-float conversion in z-score function
