--- a/src_beta/readme
+++ b/src_beta/readme
@@ -114,3 +114,6 @@ parallelize and do SIMD across voxels in the normalization step
 
 1.5.5 BETA version
 more optimization in the normalization step, do omp across z-scorings to make sure each thread processes continuous data
+
+1.5.6 BETA version
+optimize the SVM kernel matrix computing for Phi, using custom_ssryk routine
