--- a/src_beta/readme
+++ b/src_beta/readme
@@ -117,3 +117,7 @@ more optimization in the normalization step, do omp across z-scorings to make su
 
 1.5.6 BETA version
 optimize the SVM kernel matrix computing for Phi, using custom_ssryk routine
+
+1.6 BETA version
+incorporate GPUSVM to replace LibSVM code
+the first try, only for correlation-based voxel selection, works correctly but 5x slower than LibSVM
