--- a/src/readme
+++ b/src/readme
@@ -143,3 +143,8 @@ for correlation based voxel selection, memory limitation of Xeon Phi is relaxed,
 correlation based classification using top voxels is optimized for data normalization and kernel matrix computation
 other parts remain the same
 gcc 4.9 and/or icc 15.0 are recommended for compiling
+
+1.7.1
+added sending data by trial not all at once (MPI_Bcast 32-bit limit)
+removed global 'using namespace std' from common header into local using statements
+compiles using clang++ on os x again, ran llvm 3.6 static analyzer, added assertions & cleanup
