--- a/src/readme
+++ b/src/readme
@@ -165,3 +165,7 @@ Minor fixes and Makefile update
 Makefiles now generate a debug and profile version (makes all by default or do "make debug" "make release" "make profile" to only make one)
 Moved SVM paths from Makefile to Make.user by using OTHER_INCLUDES and OTHER_LDFLAGS
 note: can use "patchelf" command to update pni_fcma's ELF data on Linux to include location of svm shared libraries in case LD_LIBRARY_PATH not set up
+
+1.8.2
+fix an INT_MAX bug in SVMPredictorWithMasks, use CMM_INT (long) to cast the numbers when they are big
+replace LIBSVM with PhiSVM in SVMPredictorWithMasks
