--- a/src/readme
+++ b/src/readme
@@ -169,3 +169,9 @@ note: can use "patchelf" command to update pni_fcma's ELF data on Linux to inclu
 1.8.2
 fix an INT_MAX bug in SVMPredictorWithMasks, use CMM_INT (long) to cast the numbers when they are big
 replace LIBSVM with PhiSVM in SVMPredictorWithMasks
+
+1.9
+add functionality to output correlation matrix in HDF5 format
+fix memory leak bugs when reading data, now FCMA can deal with datasets with high resolution fMRI images (91*109*91)
+fix bugs correlation computation bugs when the two masks are not identical
+allow null masks for correlation computation
